elasticsearch-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: elk
  name: elasticsearch
  labels:
    elasticsearch: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      elasticsearch: elasticsearch
  template:
    metadata:
      labels:
        elasticsearch: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.13.4
          imagePullPolicy: "IfNotPresent"
          resources:
            limits:
              memory: 0.5Gi
              cpu: "500m"
          ports:
            - containerPort: 9200
              protocol: TCP
            - containerPort: 9300
              protocol: TCP
          volumeMounts:
            - name: elasticsearch-config
              mountPath: /usr/share/elasticsearch/config/elasticsearch.yml  
              subPath: elasticsearch.yml      
      volumes:
        - name: elasticsearch-config
          configMap:
            name: elasticsearch-config
            defaultMode: 420
