ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: elk
  name: elk-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: elasticsearch.7615fdae90e74d1d8314.eastasia.aksapp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elasticsearch-svc
                port:
                  number: 9200
    - host: kibana.7615fdae90e74d1d8314.eastasia.aksapp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-svc
                port:
                  number: 5601
